--- a/index.html
+++ b/index.html
@@ -78,11 +78,19 @@
         <a-plane width="2.6" height="0.18" color="#0e1b27" material="opacity:0.7" radius="0.02"></a-plane>
         <a-entity id="hud-hint" position="-1.22 0 0.02" text="value: เลือกลำดับล้างมือ 7 ขั้น (วงเขียวคือขั้นถัดไป); color:#cfe9ff; align:left; wrapCount:48; width:2.4"></a-entity>
         <a-entity id="hud-score" position="0.9 0 0.02" text="value: คะแนน: 0; color:#e6f3ff; align:right; width:2.0"></a-entity>
+        <a-entity id="hud-timer" position="1.25 0 0.02" text="value: เวลา: --; color:#ffd479; align:right; width:1.6"></a-entity>
       </a-entity>
       <!-- Targets grid -->
       <a-entity id="grid" position="0 -0.05 0.01"></a-entity>
+      <!-- Progress Bar -->
+      <a-entity id="progress" position="0 -0.46 0.02">
+        <a-plane width="2.4" height="0.06" color="#0b2a1a"></a-plane>
+        <a-plane id="progress-fill" width="0.0" height="0.06" color="#1ecf72" position="-1.2 0 0.01"></a-plane>
+      </a-entity>
       <!-- Controls -->
       <a-entity id="row-controls" position="0 -0.66 0.01">
+        <a-entity id="btn-start-practice" class="clickable" position="-0.1 0.32 0.01" geometry="primitive:plane; width:0.8; height:0.18" material="color:#2a84ff"><a-entity text="value: ▶ เริ่มโหมดฝึก; align:center; color:#fff; width:2.2"></a-entity></a-entity>
+        <a-entity id="btn-start-game" class="clickable" position="0.9 0.32 0.01" geometry="primitive:plane; width:0.8; height:0.18" material="color:#b35c00"><a-entity text="value: ⏱ เริ่มเกม (จับเวลา); align:center; color:#fff; width:2.4"></a-entity></a-entity>
         <a-entity id="btn-back-menu" class="clickable" position="-0.8 0 0.01"
                   geometry="primitive:plane; width:0.6; height:0.18" material="color:#2a84ff">
           <a-entity text="value: ◀ เมนู; align:center; color:#fff; width:2.2"></a-entity>
@@ -92,6 +100,16 @@
           <a-entity text="value: เล่นอีกครั้ง; align:center; color:#fff; width:2.2"></a-entity>
         </a-entity>
       </a-entity>
+    </a-entity>
+
+    <!-- Result Panel -->
+    <a-entity id="ui-result" position="0 2.0 -1.45" visible="false">
+      <a-plane width="1.8" height="1.2" color="#102033" material="opacity:0.96" radius="0.04"></a-plane>
+      <a-entity id="result-title" position="0 0.45 0.01" text="value: สรุปผล (อนามัยส่วนบุคคล); color:#e6f3ff; align:center; width:2.6"></a-entity>
+      <a-entity id="result-lines" position="0 0.16 0.01" text="value: ...; color:#cfe9ff; align:center; wrapCount:44; width:2.4"></a-entity>
+      <a-entity id="result-advice" position="0 -0.14 0.01" text="value: ...; color:#a9d6ff; align:center; wrapCount:44; width:2.4"></a-entity>
+      <a-entity id="btn-result-retry" class="clickable" position="-0.5 -0.42 0.01" geometry="primitive:plane; width:0.7; height:0.2" material="color:#2a84ff"><a-entity text="value: เล่นอีกครั้ง; align:center; color:#fff; width:2.2"></a-entity></a-entity>
+      <a-entity id="btn-result-menu" class="clickable" position="0.5 -0.42 0.01" geometry="primitive:plane; width:0.7; height:0.2" material="color:#1f6b3a"><a-entity text="value: กลับเมนู; align:center; color:#fff; width:2.2"></a-entity></a-entity>
     </a-entity>
   </a-scene>
 </body>
